samples/_failures_safe/1761348215_1285e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70b22d9f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_70b22d9f.c:161:27: error: expected ‘]’ at end of input
  161 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_70b22d9f.c:161:9: error: expected declaration or statement at end of input
  161 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_70b22d9f.c:161:9: error: expected declaration or statement at end of input
